[gd_scene load_steps=21 format=2]

[ext_resource path="res://AnimatedSpriteTest.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/Character/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Scenes/Character/PlayerData.gd" type="Script" id=3]
[ext_resource path="res://src/Scenes/Character/Invuln.anim" type="Animation" id=5]
[ext_resource path="res://src/Scenes/Character/MeleeHitbox.gd" type="Script" id=6]
[ext_resource path="res://src/Scenes/Character/Drawer.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Scenes/Character/PlayerMelee.gd" type="Script" id=8]
[ext_resource path="res://src/Scenes/Character/DodgeField.gd" type="Script" id=9]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickE.tres" type="Animation" id=10]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickS.tres" type="Animation" id=11]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickNW.tres" type="Animation" id=12]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickNE.tres" type="Animation" id=13]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickSW.tres" type="Animation" id=14]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickW.tres" type="Animation" id=15]
[ext_resource path="res://src/Scenes/Attacks/AttackAnimations/KickSE.tres" type="Animation" id=16]
[ext_resource path="res://src/Scenes/Attacks/Melee.gd" type="Script" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 137.973
height = 40.0948

[sub_resource type="Animation" id=2]
resource_name = "KickE"
length = 0.66
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Attack1N" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeleeAttack/MeleeHitbox/Hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeleeAttack/MeleeHitbox/Hitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3.05176e-05 ), Vector2( 0, -58.665 ), Vector2( 0, -58.665 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 10.8113 )

[sub_resource type="CircleShape2D" id=4]
radius = 79.9307

[node name="Character" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 1.10609, -60.5641 )
scale = Vector2( 0.681685, 0.84879 )
collision_mask = 26
script = ExtResource( 2 )

[node name="CameraTransform" type="RemoteTransform2D" parent="."]

[node name="DodgeField" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource( 9 )

[node name="DodgeHitbox" type="CollisionShape2D" parent="DodgeField"]
position = Vector2( 0.104102, 18.018 )
shape = SubResource( 1 )
disabled = true

[node name="Drawer" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invuln = ExtResource( 5 )
anims/KickE = ExtResource( 10 )
anims/KickN = SubResource( 2 )
anims/KickNE = ExtResource( 13 )
anims/KickNW = ExtResource( 12 )
anims/KickS = ExtResource( 11 )
anims/KickSE = ExtResource( 16 )
anims/KickSW = ExtResource( 14 )
anims/KickW = ExtResource( 15 )

[node name="PlayerData" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" parent="." instance=ExtResource( 1 )]
position = Vector2( 5.24619, 3.64152 )
scale = Vector2( 2.99376, 2.90437 )
animation = "Attack2SE"
frame = 11
speed_scale = 1.5

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.93909, 25.2693 )
scale = Vector2( 2.60288, 5.66228 )
shape = SubResource( 3 )

[node name="MeleeAttack" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="AttackData" type="Node" parent="MeleeAttack"]
script = ExtResource( 8 )

[node name="MeleeHitbox" type="Area2D" parent="MeleeAttack"]
collision_mask = 10
script = ExtResource( 6 )

[node name="Hitbox" type="CollisionShape2D" parent="MeleeAttack/MeleeHitbox"]
position = Vector2( 0, 3.05176e-05 )
shape = SubResource( 4 )
disabled = true
[connection signal="body_entered" from="DodgeField" to="." method="_on_DodgeField_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="action_state_change" from="PlayerData" to="." method="_on_PlayerData_action_state_change"]
[connection signal="damage_state_change" from="PlayerData" to="." method="_on_PlayerData_damage_state_change"]
[connection signal="dead" from="PlayerData" to="." method="_on_HPData_dead"]
[connection signal="direction_state_change" from="PlayerData" to="." method="_on_PlayerData_direction_state_change"]
[connection signal="body_shape_entered" from="MeleeAttack/MeleeHitbox" to="MeleeAttack" method="_on_MeleeHitbox_body_shape_entered"]
